[display: none] instead of [visibility: hidden]

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -40,7 +40,7 @@
   @for $length from 28 through $days-quantity {
     &--month-length-#{$length} {
       .calendar__day:nth-child(n + #{$length + 1}) {
-        visibility: hidden;
+        display: none;
       }
     }
   }
