$calendar-width fixed, a crutch deleted

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -2,7 +2,7 @@ $day-height: 100px;
 $day-width: 100px;
 $day-gap: 1px;
 $day-border: 1px;
-$calendar-width: ($day-gap + $day-width) * 7;
+$calendar-width: $day-width * 7 + $day-gap * 6;
 $days-quantity: 31;
 $weekdays: (
   'mon': 0,
