add basic markup and some styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,7 @@
       list-style: none;
       background-color: $cell-color;
       text-align: center;
-      font-family: Arial;
+      font-family: Arial, Helvetica, sans-serif;
 
       &:first-child {
       margin-left: 600px;
