--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -14,6 +14,7 @@
     background-color: #eee;
     border: $day-border solid black;
     box-sizing: border-box;
+    transition: transform 0.5s, background-color 0.5s;
 
     @for $day from 1 through $days-quantity {
       &:nth-child(#{$day})::before {
@@ -23,7 +24,7 @@
     &:hover {
       background-color: #ffbfcb;
       transform: translateY(-20px);
-      transition: 0.5s;
+      transition: transform 0.5s, background-color 0.5s;
       cursor: pointer;
     }
   }
