--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -86,3 +86,11 @@ video {
   vertical-align: baseline;
   box-sizing: border-box;
 }
+
+
+body {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
