--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,10 @@
+$length: 31;
+$days:(sun, mon, tue, wed, thu, fri, sat);
 $cell-width: 99px;
 $cell-height: 99px;
 $cell-border-color: #000;
 $cell-border: 1px solid $cell-border-color;
 $cell-color: #eee;
-$cell-width: 99px;
-$cell-width: 99px;
-$cell-width: 99px;
+$month-length: 28;
 $cell-width: 99px;
 
