--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,4 @@ $cell-height: 99px;
 $cell-border-color: #000;
 $cell-border: 1px solid $cell-border-color;
 $cell-color: #eee;
-$month-length: 28;
-$cell-width: 99px;
-
+$hovered-cell-color: #ffbfcb;
