--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+  @use "sass:list";
+
 .calendar {
   display: flex;
   justify-content: flex-start;
@@ -7,42 +9,45 @@
   max-width: 720px;
   padding: 10px;
 
-    &__item {
-      width: $cell-width;
-      height: $cell-height;
-      border: $cell-border;
-      list-style: none;
-      background-color: $cell-color;
-      text-align: center;
-      font-family: Arial, Helvetica, sans-serif;
+  &__item {
+    width: $cell-width;
+    height: $cell-height;
+    border: $cell-border;
+    list-style: none;
+    background-color: $cell-color;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: transform 0.5s;
 
-      @for $i from 1 through 31 {
-        &:nth-child(#{$i}) {
-          @if $i > $length {
-            display: none;
-          }
-        }
-      }
+    &:hover {
+      cursor: pointer;
+      background-color: $hovered-cell-color;
+      transform: translateY(-20px);
+    }
 
-      @for $i from 1 through 31 {
-        &:nth-child(#{$i})::before {
-          content: "#{$i}";
-          color: black;
-          font-size: 30px;
-          line-height: 99px;
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i}) {
+        @if $i > $length {
+          display: none;
         }
       }
     }
 
-
-    @each $day in $days {
-      $index: list.index($days, $day);
-
-      &__start-day--#{$day} {
-        .calendar__item:first-child {
-          margin-left: (100% / 7) * ($index - 1);
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+        color: black;
+        font-size: 30px;
+        line-height: 99px;
       }
     }
-}
+  }
 
+  @each $day in $days {
+    .calendar__start-day--#{$day} {
+      .calendar__item:first-child {
+        margin-left: (100% / 7) * list.index($days, $day);
+      }
+    }
+  }
 }
