--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -87,9 +87,9 @@ video {
   box-sizing: border-box;
 }
 
-
 body {
   width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
