Fix some remark of mentor.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,2 @@
-$days-of-week: ("mon": 0, "tue": 103px, "wed": 206px, "thu": 309px, 
-"fri": 412px, "sat": 515px, "sun": 618px);
+$days-of-week: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, 
+"fri": 4, "sat": 5, "sun": 6);
