--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,42 +40,20 @@ body {
     }
   }
 
-  &--month-length--28 {
-    @for $day from 28 + 1 through 32 {
-      .calendar__day:nth-child(#{$day}) {
-        display: none;
+  @for $month-len from 28 through 31 {
+    &--month-length--#{$month-len} {
+      @for $day from $month-len + 1 through 32 {
+        .calendar__day:nth-child(#{$day}) {
+          display: none;
+        }
       }
     }
   }
 
-  &--month-length--29 {
-    @for $day from 29 + 1 through 32 {
-      .calendar__day:nth-child(#{$day}) {
-        display: none;
-      }
-    }
-  }
-
-  &--month-length--30 {
-    @for $day from 30 + 1 through 32 {
-      .calendar__day:nth-child(#{$day}) {
-        display: none;
-      }
-    }
-  }
-
-  &--month-length--31 {
-    @for $day from 31 + 1 through 32 {
-      .calendar__day:nth-child(#{$day}) {
-        display: none;
-      }
-    }
-  }
-
-  @each $dayName, $dayPosition in val.$days-of-week {
+  @each $dayName, $dayNumber in val.$days-of-week {
     &--start-day--#{$dayName} {
       .calendar__day:first-child {
-        margin-left: $dayPosition;
+        margin-left: $dayNumber * 103px;
       }
     }
   }
