--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,10 @@
 @use "./variables" as val;
 @use "sass:map";
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -11,7 +15,7 @@ body {
   flex-wrap: wrap;
   gap: 1px;
   position: fixed;
-  width: 780px;
+  width: 720px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
