--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -4,3 +4,4 @@ $calendar-padding: 10px;
 $calendar-positioning: 50%;
 $transition-duration: 0.5s;
 $calendar-width: ($cell-size * 7) + ($cell-gap * 6) + ($calendar-padding * 2);
+$days: ('sun' 6, 'sat' 5, 'fri' 4, 'thu' 3, 'wed' 2, 'tue' 1, 'mon' 0;);
