--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,6 +21,7 @@ body {
   height: fit-content;
   flex-wrap: wrap;
   gap: 1px;
+  padding: 0;
 
   &__day {
     display: flex;
@@ -29,7 +30,7 @@ body {
     border: 1px solid black;
     box-sizing: border-box;
     background-color: #eee;
-    transition: transform 0.5s;
+    transition: 0.5s;
   }
 
   @for $i from 1 through 31 {
