--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,64 @@
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: 706px;
+  gap: 1px;
+
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    background-color: #eee;
+
+    transition: all 0.5s;
+  }
+
+  @for $i from 1 through 31 {
+    &__day:nth-child(#{$i})::before {
+      content: '#{$i}';
+      margin: auto;
+      font-size: 30px;
+    }
+
+    &__day:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
+
+  $days: (
+    'mon': 0,
+    'tue': 101px,
+    'wed': 202px,
+    'thu': 303px,
+    'fri': 404px,
+    'sat': 505px,
+    'sun': 606px,
+  );
+
+  @each $name, $day in $days {
+    &--start-day-#{$name} &__day:first-child {
+      margin-left: $day;
+    }
+  }
+
+  @for $k from 28 through 31 {
+    &--month-length-#{$k} &__day:nth-child(n + #{$k + 1}) {
+      display: none;
+    }
+  }
 }
