--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,4 @@
-// src/styles/main.scss
-$padding: 10px;
-$gap: 1px;
-$day-color: #eee;
-$day-color-hover: #ffbfcb;
-$day-height: 100px;
-$day-width: 100px;
-$day-size: 100px;
-$calendar-width: $day-width * 7 + $gap * 6;
-$days: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
+@import '/src/styles/variables';
 
 body {
   display: flex;
