--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -83,14 +83,17 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  vertical-align: baseline;
   box-sizing: border-box;
 }
 
+html,
 body {
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
