--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,5 +2,9 @@
 @import './calendar';
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
 }
