--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,14 +7,15 @@ $gap: 1px;
 $colomns: 7;
 
 // just change your month lenght
-$month__lenght: 31;
-$mon: 1;
-$tue: 2;
-$wed: 3;
-$thu: 4;
-$fri: 5;
-$sat: 6;
-$sun: 7;
+$week-days: (
+  'mon': 1,
+  'tue': 2,
+  'wed': 3,
+  'thu': 4,
+  'fri': 5,
+  'sat': 6,
+  'sun': 7,
+);
 
 // #endregion Variables
 
@@ -49,11 +50,9 @@ body {
     align-items: center;
     justify-content: center;
 
-    @each $last__day in $month__lenght {
-      @for $i from 1 through $last__day {
-        &:nth-child(n + #{$i})::before {
-          content: '#{$i}';
-        }
+    @for $i from 1 through 31 {
+      &:nth-child(n + #{$i})::before {
+        content: '#{$i}';
       }
     }
 
@@ -64,114 +63,20 @@ body {
       transform: translateY(-20px);
     }
   }
-
-  // #region Start day constraction
-
-  &--start-day-sun {
-    .calendar__day:first-child {
-      margin-left: calc($cell__size * $sun - 95px + $gap);
-    }
-  }
-
-  &--start-day-sat {
-    .calendar__day:first-child {
-      margin-left: calc($cell__size * $sat - 96px + $gap);
-    }
-  }
-
-  &--start-day-fri {
-    .calendar__day:first-child {
-      margin-left: calc($cell__size * $fri - 97px + $gap);
-    }
-  }
-
-  &--start-day-thu {
-    .calendar__day:first-child {
-      margin-left: calc($cell__size * $thu - 98px + $gap);
-    }
-  }
-
-  &--start-day-wed {
-    .calendar__day:first-child {
-      margin-left: calc($cell__size * $wed - 99px + $gap);
-    }
-  }
-
-  &--start-day-tue {
-    .calendar__day:first-child {
-      margin-left: calc($cell__size * $tue - 100px + $gap);
-    }
-  }
-
-  &--start-day-mon {
-    .calendar__day:first-child {
-      margin-left: 0;
-    }
-  }
-
-  // #endregion Start day constraction
 }
 
-// #region month-length
-.calendar--month-length-30 {
-  .calendar__day:last-child {
-    display: none;
+// replaced old code construction and provide @each construction
+@each $day, $day-number in $week-days {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: ($cell__size + $gap) * $day-number - 101px;
+    }
   }
 }
 
-.calendar--month-length-29 {
-  .calendar__day:nth-last-child(1) {
-    display: none;
-  }
-
-  .calendar__day:nth-last-child(2) {
+// replaced old code construction and provide @for construction
+@for $i from 28 through 31 {
+  .calendar--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
     display: none;
   }
 }
-
-.calendar--month-length-28 {
-  .calendar__day:nth-last-child(1) {
-    display: none;
-  }
-
-  .calendar__day:nth-last-child(2) {
-    display: none;
-  }
-
-  .calendar__day:nth-last-child(3) {
-    display: none;
-  }
-}
-
-// #endregion month-length
-
-// #region another construction for month-length
-
-// @if $month__lenght == 30 {
-//   &:last-child {
-//     display: none;
-//   }
-// }
-
-// @if $month__lenght == 29 {
-//   &:nth-last-child(1) {
-//     display: none;
-//   }
-//   &:nth-last-child(2) {
-//     display: none;
-//   }
-// }
-
-// @if $month__lenght == 28 {
-//   &:nth-last-child(1) {
-//     display: none;
-//   }
-//   &:nth-last-child(2) {
-//     display: none;
-//   }
-//   &:nth-last-child(3) {
-//     display: none;
-//   }
-// }
-
-// #endregion another construction for month-length
