add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -63,5 +63,6 @@ body {
     background-color: #ffbfcb;
     transform: translateY(-20px);
     animation-timing-function: 0.5s;
+    transition: all;
   }
 }
