--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,80 @@
+$cell-color: #eee;
+$cell-hover-color: #ffbfcb;
+$square-value: 100px;
+$gap: 1px;
+$padding: 10px;
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
+  position: relative;
   margin: 0;
+  height: 100vh;
+}
+
+.calendar {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: $padding;
+  width: ($square-value * 7) + ($gap * 6) + ($padding * 2);
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+
+  &__day {
+    visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    width: $square-value;
+    height: $square-value;
+    background-color: $cell-color;
+    border: 1px solid black;
+    transition-duration: 0.5s;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+        font-size: 30px;
+        line-height: 30px;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: $cell-hover-color;
+      transform: translateY(-20px);
+    }
+  }
+
+  $week:
+    'mon' 0,
+    'tue' $square-value + $gap,
+    'wed' ($square-value + $gap) * 2,
+    'thu' ($square-value + $gap) * 3,
+    'fri' ($square-value + $gap) * 4,
+    'sat' ($square-value + $gap) * 5,
+    'sun' ($square-value + $gap) * 6;
+
+  @each $day, $day-margin-left in $week {
+    &--start-day--#{$day} {
+      :first-child {
+        margin-left: $day-margin-left;
+      }
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length--#{$i} {
+      :nth-child(-n + #{$i}) {
+        visibility: visible;
+      }
+    }
+  }
 }
