--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,4 @@
-$cell-color: #eee;
-$cell-hover-color: #ffbfcb;
-$square-value: 100px;
-$gap: 1px;
-$padding: 10px;
+@import './variables.scss';
 
 html {
   font-family: Arial, Helvetica, sans-serif;
