--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,10 @@ $month-length: 28, 29, 30, 31;
 
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .calendar {
@@ -21,11 +25,6 @@ body {
   flex-wrap: wrap;
   padding: 10px;
   gap: 1px;
-  margin: 0 auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 
   &__day {
     box-sizing: border-box;
