--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import 'utils/variables.scss';
-@import 'blocks/reset.scss';
-@import 'blocks/main.scss';
-@import 'blocks/calendar.scss';
+@import 'utils/variables';
+@import 'blocks/reset';
+@import 'blocks/main';
+@import 'blocks/calendar';
