--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -16,12 +16,11 @@
     height: $day-size;
     border: 1px solid #000;
     background-color: $bg-color;
-    transition-duration: 500ms;
+    transition: all 0.5s;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: '#{$i}';
-        color: #000;
       }
     }
 
