--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -16,7 +16,7 @@
     height: $day-size;
     border: 1px solid #000;
     background-color: $bg-color;
-    transition: all 0.5s;
+    transition: background-color $transition-duration, transform $transition-duration;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
