--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -4,6 +4,7 @@ $hover-bg-color: #ffbfcb;
 $columns: 7;
 $calendar-gap: 1px;
 $calendar-padding: 10px;
+$transition-duration: 500ms;
 $calendar-width: calc(
   (7 * $day-size) + (6 * $calendar-gap) + (2 * $calendar-padding)
 );
@@ -16,3 +17,5 @@ $days: (
   'sat': 5,
   'sun': 6,
 );
+
+
