--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
-@import './utils/variables.scss';
-@import './blocks/initial.scss';
-@import './blocks/body.scss';
-@import './blocks/calendar.scss';
+@import './utils/variables';
+@import './blocks/initial';
+@import './blocks/body';
+@import './blocks/calendar';
 
 
 
