--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,7 +21,7 @@ body {
   align-items: center;
   height: 100px;
   width: 100px;
-  background-color: #eee;
+  background-color: white;
   border: 1px solid black;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
