--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,27 @@
 body {
   margin: 0;
 }
+
+.calendar {
+  height: 705px;
+  display: flex;
+  box-sizing: border-box;
+  gap: 1px;
+  flex-flow: column;
+
+  &__day {
+    width: 100px;
+    height: 100px;
+
+    border: 1px solid black;
+    &:last-child {
+      background-color: aquamarine;
+    }
+  }
+}
+
+// .calendar:last-child{
+
+// }
+// @for $day from 1 to 31 {
+// }
