--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,193 +2,6 @@ body {
   margin: 0;
 }
 
-.month-length .calendar__day:nth-child(1)::before {
-  content: "1";
-}
-.month-length .calendar__day:nth-child(1) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(2)::before {
-  content: "2";
-}
-.month-length .calendar__day:nth-child(2) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(3)::before {
-  content: "3";
-}
-.month-length .calendar__day:nth-child(3) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(4)::before {
-  content: "4";
-}
-.month-length .calendar__day:nth-child(4) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(5)::before {
-  content: "5";
-}
-.month-length .calendar__day:nth-child(5) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(6)::before {
-  content: "6";
-}
-.month-length .calendar__day:nth-child(6) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(7)::before {
-  content: "7";
-}
-.month-length .calendar__day:nth-child(7) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(8)::before {
-  content: "8";
-}
-.month-length .calendar__day:nth-child(8) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(9)::before {
-  content: "9";
-}
-.month-length .calendar__day:nth-child(9) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(10)::before {
-  content: "10";
-}
-.month-length .calendar__day:nth-child(10) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(11)::before {
-  content: "11";
-}
-.month-length .calendar__day:nth-child(11) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(12)::before {
-  content: "12";
-}
-.month-length .calendar__day:nth-child(12) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(13)::before {
-  content: "13";
-}
-.month-length .calendar__day:nth-child(13) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(14)::before {
-  content: "14";
-}
-.month-length .calendar__day:nth-child(14) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(15)::before {
-  content: "15";
-}
-.month-length .calendar__day:nth-child(15) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(16)::before {
-  content: "16";
-}
-.month-length .calendar__day:nth-child(16) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(17)::before {
-  content: "17";
-}
-.month-length .calendar__day:nth-child(17) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(18)::before {
-  content: "18";
-}
-.month-length .calendar__day:nth-child(18) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(19)::before {
-  content: "19";
-}
-.month-length .calendar__day:nth-child(19) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(20)::before {
-  content: "20";
-}
-.month-length .calendar__day:nth-child(20) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(21)::before {
-  content: "21";
-}
-.month-length .calendar__day:nth-child(21) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(22)::before {
-  content: "22";
-}
-.month-length .calendar__day:nth-child(22) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(23)::before {
-  content: "23";
-}
-.month-length .calendar__day:nth-child(23) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(24)::before {
-  content: "24";
-}
-.month-length .calendar__day:nth-child(24) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(25)::before {
-  content: "25";
-}
-.month-length .calendar__day:nth-child(25) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(26)::before {
-  content: "26";
-}
-.month-length .calendar__day:nth-child(26) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(27)::before {
-  content: "27";
-}
-.month-length .calendar__day:nth-child(27) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(28)::before {
-  content: "28";
-}
-.month-length .calendar__day:nth-child(28) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(29)::before {
-  content: "29";
-}
-.month-length .calendar__day:nth-child(29) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(30)::before {
-  content: "30";
-}
-.month-length .calendar__day:nth-child(30) {
-  display: flex;
-}
-.month-length .calendar__day:nth-child(31)::before {
-  content: "31";
-}
-.month-length .calendar__day:nth-child(31) {
-  display: flex;
-}
-
 .calendar {
   width: 706px;
   padding: 10px;
@@ -198,6 +11,283 @@ body {
   flex-wrap: wrap;
   align-content: start;
 }
+
+.calendar--month-length .calendar__day:nth-child(1)::before {
+  content: "1";
+}
+
+.calendar--month-length .calendar__day:nth-child(1) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(2)::before {
+  content: "2";
+}
+
+.calendar--month-length .calendar__day:nth-child(2) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(3)::before {
+  content: "3";
+}
+
+.calendar--month-length .calendar__day:nth-child(3) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(4)::before {
+  content: "4";
+}
+
+.calendar--month-length .calendar__day:nth-child(4) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(5)::before {
+  content: "5";
+}
+
+.calendar--month-length .calendar__day:nth-child(5) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(6)::before {
+  content: "6";
+}
+
+.calendar--month-length .calendar__day:nth-child(6) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(7)::before {
+  content: "7";
+}
+
+.calendar--month-length .calendar__day:nth-child(7) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(8)::before {
+  content: "8";
+}
+
+.calendar--month-length .calendar__day:nth-child(8) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(9)::before {
+  content: "9";
+}
+
+.calendar--month-length .calendar__day:nth-child(9) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(10)::before {
+  content: "10";
+}
+
+.calendar--month-length .calendar__day:nth-child(10) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(11)::before {
+  content: "11";
+}
+
+.calendar--month-length .calendar__day:nth-child(11) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(12)::before {
+  content: "12";
+}
+
+.calendar--month-length .calendar__day:nth-child(12) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(13)::before {
+  content: "13";
+}
+
+.calendar--month-length .calendar__day:nth-child(13) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(14)::before {
+  content: "14";
+}
+
+.calendar--month-length .calendar__day:nth-child(14) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(15)::before {
+  content: "15";
+}
+
+.calendar--month-length .calendar__day:nth-child(15) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(16)::before {
+  content: "16";
+}
+
+.calendar--month-length .calendar__day:nth-child(16) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(17)::before {
+  content: "17";
+}
+
+.calendar--month-length .calendar__day:nth-child(17) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(18)::before {
+  content: "18";
+}
+
+.calendar--month-length .calendar__day:nth-child(18) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(19)::before {
+  content: "19";
+}
+
+.calendar--month-length .calendar__day:nth-child(19) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(20)::before {
+  content: "20";
+}
+
+.calendar--month-length .calendar__day:nth-child(20) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(21)::before {
+  content: "21";
+}
+
+.calendar--month-length .calendar__day:nth-child(21) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(22)::before {
+  content: "22";
+}
+
+.calendar--month-length .calendar__day:nth-child(22) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(23)::before {
+  content: "23";
+}
+
+.calendar--month-length .calendar__day:nth-child(23) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(24)::before {
+  content: "24";
+}
+
+.calendar--month-length .calendar__day:nth-child(24) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(25)::before {
+  content: "25";
+}
+
+.calendar--month-length .calendar__day:nth-child(25) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(26)::before {
+  content: "26";
+}
+
+.calendar--month-length .calendar__day:nth-child(26) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(27)::before {
+  content: "27";
+}
+
+.calendar--month-length .calendar__day:nth-child(27) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(28)::before {
+  content: "28";
+}
+
+.calendar--month-length .calendar__day:nth-child(28) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(29)::before {
+  content: "29";
+}
+
+.calendar--month-length .calendar__day:nth-child(29) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(30)::before {
+  content: "30";
+}
+
+.calendar--month-length .calendar__day:nth-child(30) {
+  display: flex;
+}
+
+.calendar--month-length .calendar__day:nth-child(31)::before {
+  content: "31";
+}
+
+.calendar--month-length .calendar__day:nth-child(31) {
+  display: flex;
+}
+
+.calendar--start-day .calendar__day:first-child {
+  margin-left: 0px;
+}
+
+.calendar--start-day .calendar__day:first-child {
+  margin-left: 101px;
+}
+
+.calendar--start-day .calendar__day:first-child {
+  margin-left: 202px;
+}
+
+.calendar--start-day .calendar__day:first-child {
+  margin-left: 303px;
+}
+
+.calendar--start-day .calendar__day:first-child {
+  margin-left: 404px;
+}
+
+.calendar--start-day .calendar__day:first-child {
+  margin-left: 505px;
+}
+
+.calendar--start-day .calendar__day:first-child {
+  margin-left: 606px;
+}
+
 .calendar__day {
   display: none;
   box-sizing: border-box;
@@ -208,31 +298,10 @@ body {
   border: 1px solid black;
   background-color: #eee;
 }
+
 .calendar__day:hover {
   background-color: #ffbfcb;
   cursor: pointer;
   transform: translateY(-20px);
   transition-duration: 500ms;
-}
-
-.start-day .calendar__day:first-child {
-  margin-left: 0px;
-}
-.start-day .calendar__day:first-child {
-  margin-left: 101px;
-}
-.start-day .calendar__day:first-child {
-  margin-left: 202px;
-}
-.start-day .calendar__day:first-child {
-  margin-left: 303px;
-}
-.start-day .calendar__day:first-child {
-  margin-left: 404px;
-}
-.start-day .calendar__day:first-child {
-  margin-left: 505px;
-}
-.start-day .calendar__day:first-child {
-  margin-left: 606px;
 }/*# sourceMappingURL=index.css.map */
