--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,17 +4,7 @@ body {
   margin: 0;
 }
 
-.month-length {
-  $days: 31;
-  @for $i from 1 through $days {
-    .calendar__day:nth-child(#{$i})::before {
-      content: '#{$i}';
-    }
-    .calendar__day:nth-child(#{$i}) {
-      display: flex;
-    }
-  }
-}
+
 
 .calendar {
   width: 7 * $square-size + 6px;
@@ -24,6 +14,26 @@ body {
   flex-flow: row;
   flex-wrap: wrap;
   align-content: start;
+
+  &--month-length {
+    $days: 31;
+    @for $i from 1 through $days {
+      .calendar__day:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
+      .calendar__day:nth-child(#{$i}) {
+        display: flex;
+      }
+    }
+  }
+
+  &--start-day {
+    @each $number, $day, $margin in $days {
+      .calendar__day:first-child {
+        margin-left: ($margin + 1px) * $number;
+      }
+    }
+  }
 
   &__day {
     display: none;
@@ -43,10 +53,4 @@ body {
     }
   }
 }
-.start-day {
-  @each $number, $day, $margin in $days {
-    .calendar__day:first-child {
-      margin-left: ($margin + 1px) * $number;
-    }
-  }
-}
+
