--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,11 @@
 $square-size: 100px;
-$days:
-  0 'mon' $square-size,
-  1 'tue' $square-size,
-  2 'wed' $square-size,
-  3 'thu' $square-size,
-  4 'fri' $square-size,
-  5 'sat' $square-size,
-  6 'sun' $square-size;
+$default-days: 31;
+$days: (
+  0: 'mon',
+  1: 'tue',
+  2: 'wed',
+  3: 'thu',
+  4: 'fri',
+  5: 'sat',
+  6: 'sun',
+);
