--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,20 +1,4 @@
-$day-size: 100px;
-$day-border: 1px solid black;
-$day-font-size: 30px;
-$calendar-gap: 1px;
-$calendar-padding: 10px;
-$calendar-width: calc(
-  $day-size * 7 + $calendar-gap * 6 + $calendar-padding * 2
-);
-$days: (
-  'mon': 0,
-  'tue': 1,
-  'wed': 2,
-  'thu': 3,
-  'fri': 4,
-  'sat': 5,
-  'sun': 6,
-);
+@import 'variables';
 
 html {
   height: 100vh;
