--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,8 +30,7 @@ body {
     box-sizing: border-box;
     height: $cell-size;
     width: $cell-size;
-    font-family: Arial, sans-serif;
-    font-size: 30px;
+    position: relative;
     background-color: #eee;
     border: 1px solid black;
     transition: all 0.5s;
@@ -39,11 +38,14 @@ body {
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: '#{$i}';
-        display: flex;
-        height: $cell-size - $gap-size;
-        width: $cell-size - $gap-size;
-        align-items: center;
-        justify-content: center;
+        font-family: Arial, sans-serif;
+        font-size: 30px;
+        line-height: 30px;
+        position: absolute;
+        text-align: center;
+        bottom: ($cell-size - 2 * $gap-size) / 2;
+        right: ($cell-size - 3 * $gap-size) / 2;
+        transform: translate(50%, 50%);
       }
     }
 
