add task solution

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,6 +20,12 @@ body {
   border: 1px solid #000;
   transition-duration: 0.5s;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+  padding-top: 2px;
 }
 
 .calendar__day:hover {
@@ -29,347 +35,172 @@ body {
   transition-duration: 0.5s;
 }
 
-.calendar__day-mon:first-child {
+.calendar--start-day-mon .calendar__day:first-child {
   margin-left: 0;
 }
 
-.calendar__day-tue:first-child {
+.calendar--start-day-tue .calendar__day:first-child {
   margin-left: 101px;
 }
 
-.calendar__day-wed:first-child {
+.calendar--start-day-wed .calendar__day:first-child {
   margin-left: 202px;
 }
 
-.calendar__day-thu:first-child {
+.calendar--start-day-thu .calendar__day:first-child {
   margin-left: 303px;
 }
 
-.calendar__day-fri:first-child {
+.calendar--start-day-fri .calendar__day:first-child {
   margin-left: 404px;
 }
 
-.calendar__day-sat:first-child {
+.calendar--start-day-sat .calendar__day:first-child {
   margin-left: 505px;
 }
 
-.calendar__day-sun:first-child {
+.calendar--start-day-sun .calendar__day:first-child {
   margin-left: 606px;
 }
 
 .calendar__day:nth-child(1)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '1';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "1";
 }
 
 .calendar__day:nth-child(2)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '2';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "2";
 }
 
 .calendar__day:nth-child(3)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '3';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "3";
 }
 
 .calendar__day:nth-child(4)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '4';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "4";
 }
 
 .calendar__day:nth-child(5)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '5';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "5";
 }
 
 .calendar__day:nth-child(6)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '6';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "6";
 }
 
 .calendar__day:nth-child(7)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '7';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "7";
 }
 
 .calendar__day:nth-child(8)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '8';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "8";
 }
 
 .calendar__day:nth-child(9)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '9';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "9";
 }
 
 .calendar__day:nth-child(10)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '10';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "10";
 }
 
 .calendar__day:nth-child(11)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '11';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "11";
 }
 
 .calendar__day:nth-child(12)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '12';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "12";
 }
 
 .calendar__day:nth-child(13)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '13';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "13";
 }
 
 .calendar__day:nth-child(14)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '14';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "14";
 }
 
 .calendar__day:nth-child(15)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '15';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "15";
 }
 
 .calendar__day:nth-child(16)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '16';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "16";
 }
 
 .calendar__day:nth-child(17)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '17';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "17";
 }
 
 .calendar__day:nth-child(18)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '18';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "18";
 }
 
 .calendar__day:nth-child(19)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '19';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "19";
 }
 
 .calendar__day:nth-child(20)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '20';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "20";
 }
 
 .calendar__day:nth-child(21)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '21';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "21";
 }
 
 .calendar__day:nth-child(22)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '22';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "22";
 }
 
 .calendar__day:nth-child(23)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '23';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "23";
 }
 
 .calendar__day:nth-child(24)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '24';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "24";
 }
 
 .calendar__day:nth-child(25)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '25';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "25";
 }
 
 .calendar__day:nth-child(26)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '26';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "26";
 }
 
 .calendar__day:nth-child(27)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '27';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "27";
 }
 
 .calendar__day:nth-child(28)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '28';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "28";
 }
 
 .calendar__day:nth-child(29)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '29';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "29";
 }
 
 .calendar__day:nth-child(30)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '30';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "30";
 }
 
 .calendar__day:nth-child(31)::before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '31';
-  height: 98px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "31";
 }
 
-.ones {
-  margin-left: 606px;
-  animation-duration: 0;
+.calendar--month-length-28 .calendar__day:nth-child(n+29) {
+  display: none;
+}
+
+.calendar--month-length-29 .calendar__day:nth-child(n+30) {
+  display: none;
+}
+
+.calendar--month-length-30 .calendar__day:nth-child(n+31) {
+  display: none;
+}
+
+.calendar--month-length-31 .calendar__day:nth-child(n+32) {
+  display: none;
 }
 
 /*# sourceMappingURL=index.css.map */
