add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,6 @@
 
 body {
   margin: 0;
-  padding: 0;
 
   display: flex;
   justify-content: center;
@@ -48,21 +47,21 @@ body {
 
   &__day {
     display: flex;
-    width: $day-width;
-    height: $day-height;
+    width: $day-size;
+    height: $day-size;
     position: relative;
     box-sizing: border-box;
 
-    padding: 0 !important;
+    padding: 0s;
 
     background-color: $day-color;
     border: 1px black solid;
     transition: transform 0.5s;
-  }
 
-  &__day:hover {
-    cursor: pointer;
-    background-color: $hover-color;
-    transform: translateY(-20px);
+    &:hover {
+      cursor: pointer;
+      background-color: $hover-color;
+      transform: translateY(-20px);
+    }
   }
 }
