--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,9 +1,8 @@
 $day-color: #eee;
-$day-width: 100px;
-$day-height: 100px;
+$day-size: 100px;
 $day-font: Arial;
 $day-font-size: 30px;
-$hover-color: #f0eaeb;
+$hover-color: #FFBFCB;
 $start-day-margins: (
   mon: 0,
   tue: 101px,
