--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,65 +1,2 @@
-$calendar-day-size: 100px;
-$mothlengh: 31;
-$days-of-week:
-  mon 0,
-  tue 1,
-  wed 2,
-  thu 3,
-  fri 4,
-  sat 5,
-  sun 6;
-
-body {
-  margin: 0;
-}
-
-.calendar {
-  display: flex;
-  flex-flow: row wrap;
-  gap: 1px;
-  padding: 10px;
-  width: calc(7 * ($calendar-day-size + 1px));
-
-  &__day {
-    box-sizing: border-box;
-    width: $calendar-day-size;
-    height: $calendar-day-size;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    border: 1px solid black;
-
-    &:hover{
-      cursor: pointer;
-      background-color: #FFBFCB;
-      transform: translate(0px, -20px);
-      transition: 1s ease-in-out 0.5s;
-    }
-  }
-
-  @for $count from 1 through $mothlengh {
-    &__day:nth-child(#{$count}) {
-      &::before {
-        content: '#{$count}';
-      }
-    }
-  }
-
-  @for $count from 28 through $mothlengh {
-    &--month-length-#{$count} {
-      .calendar__day:nth-child(n + #{$count + 1}) {
-        display: none;
-      }
-    }
-  }
-
-  @each $day, $index in $days-of-week {
-    &--start-day-#{$day} {
-      .calendar__day:first-child {
-        margin-left: calc(#{$index} * ($calendar-day-size + 1px));
-      }
-    }
-  }
-}
+@import 'variables';
+@import 'calendar';
